added font-family and font-weight

--- a/src/component/Product.module.css
+++ b/src/component/Product.module.css
@@ -38,6 +38,8 @@
 .productName, .productPrice {
     text-align: center;
     color: #6C757D;
+    font-family: 'Lato', sans-serif;
+    font-size: 20px;
 }
 
 .productName:hover, .productPrice:hover {
